RESOLVED FIXED37160
[V8] Throw exception in SerializedScriptValue on input errors
https://bugs.webkit.org/show_bug.cgi?id=37160
Summary [V8] Throw exception in SerializedScriptValue on input errors
Vitaly Repeshko
Reported 2010-04-06 10:43:25 PDT
[V8] Throw exception in SerializedScriptValue on input errors
Attachments
patch v1 (12.42 KB, patch)
2010-04-06 10:48 PDT, Vitaly Repeshko
yurys: review+
Vitaly Repeshko
Comment 1 2010-04-06 10:48:51 PDT
Created attachment 52650 [details] patch v1
Yury Semikhatsky
Comment 2 2010-04-07 00:08:01 PDT
Comment on attachment 52650 [details] patch v1 > - explicit SerializedScriptValue(v8::Handle<v8::Value>); > + SerializedScriptValue(v8::Handle<v8::Value>, bool& didThrow); > I don't like the idea of out parameter in the constructor but since it's private I think that is ok.
Vitaly Repeshko
Comment 3 2010-04-07 07:05:32 PDT
M WebCore/ChangeLog M WebCore/bindings/scripts/CodeGeneratorV8.pm M WebCore/bindings/v8/SerializedScriptValue.cpp M WebCore/bindings/v8/SerializedScriptValue.h M WebCore/bindings/v8/custom/V8DOMWindowCustom.cpp M WebCore/bindings/v8/custom/V8DedicatedWorkerContextCustom.cpp M WebCore/bindings/v8/custom/V8HistoryCustom.cpp M WebCore/bindings/v8/custom/V8MessagePortCustom.cpp M WebCore/bindings/v8/custom/V8PopStateEventCustom.cpp M WebCore/bindings/v8/custom/V8WorkerCustom.cpp Committed r57207
Note You need to log in before you can comment on or make changes to this bug.